UPDATE #8 more apis for user settings
