# app/Http/Controllers/Api/UserSettingsController.php
@@ -108,6 +108,107 @@ class UserSettingsController extends Controller
     }
 
     /**
+     * Update User Username
+     * 
+     * @param Request $request
+     * @return \Illuminate\Http\JsonResponse
+     * 
+     * @group User Settings
+     * @bodyParam username string required Username of the user. Example: johndoe
+     * @response status=200 scenario="success" {
+     * "message": "Username updated"
+     * }
+     * @response status=401 scenario="Unauthenticated" {"message": "Unauthenticated."}
+     */
+    public function postSaveUsername(Request $request)
+    {
+        $request->validate([
+            'username' => 'required|string|max:9|unique:users,username,' . auth()->user()->id,
+        ]);
+
+        $user = auth()->user();
+        $user->username = $request->username;
+        $user->save();
+
+        return response()->json(['message' => 'Username updated']);
+    }
+
+    /**
+     * Update User Bio
+     * 
+     * @param Request $request
+     * @return \Illuminate\Http\JsonResponse
+     * 
+     * @group User Settings
+     * @bodyParam bio string required Bio of the user. Example: I am a software engineer
+     */
+    public function postSaveBio(Request $request)
+    {
+        $request->validate([
+            'bio' => 'required|string|max:2000',
+        ]);
+
+        $user = auth()->user();
+        $user->bio = $request->bio;
+        $user->save();
+
+        return response()->json(['message' => 'Bio updated']);
+    }
+
+    /**
+     * Update User Date of Birth
+     * 
+     * @param Request $request
+     * @return \Illuminate\Http\JsonResponse
+     * 
+     * @group User Settings
+     * @bodyParam day integer required Day of the date of birth. Example: 1
+     * @bodyParam month integer required Month of the date of birth. Example: 1
+     * @bodyParam year integer required Year of the date of birth. Example: 1990
+     * @response status=200 scenario="success" {
+     * "message": "Date of birth updated"
+     * }
+     * 
+     * @response status=401 scenario="Unauthenticated" {"message": "Unauthenticated."}
+     */
+    public function postSaveDob(Request $request)
+    {
+        $request->validate([
+            'day' => 'required|integer|min:1|max:31',
+            'month' => 'required|integer|min:1|max:12',
+            'year' => 'required|integer|min:1900|max:'. (date('Y') - 18),
+        ]);
+
+        $user = auth()->user();
+        $user->dob = $request->year . '-' . $request->month . '-' . $request->day;
+        $user->save();
+
+        return response()->json(['message' => 'Date of birth updated']);
+    }
+    
+    /**
+     * Update User Save Gender
+     * 
+     * @param Request $request
+     * @return \Illuminate\Http\JsonResponse
+     * 
+     * @group User Settings
+     * @bodyParams gender string required Male or Female. Example: male,female
+     */
+    public function postSaveGender(Request $request)
+    {
+        $request->validate([
+            'gender' => 'required|in:male,female'
+        ]);
+
+        $user = auth()->user();
+        $user->gender = $request->gender;
+        $user->save();
+
+        return response()->json(['message' => 'Gender updated']);
+    }
+
+    /**
      * Link Article Categories to User (used for interest tagging)
      * 
      * @param Request $request
@@ -181,4 +282,5 @@ class UserSettingsController extends Controller
             'avatar_thumb' => $uploadedAvatar->getUrl('thumb'),
         ]);
     }
+    
 }
